--- a/index.ipynb
+++ b/index.ipynb
@@ -31,23 +31,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# State you null and alternative hypotheses\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "import scipy.stats as stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# State you null and alternative hypotheses\n",
+    "ha = mean =< 61\n",
+    "h0 = mean = 60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Your solution here\n",
+    "mu = 60\n",
+    "sigma = 30\n",
+    "n = 36\n",
+    "x_bar = 75\n",
     "\n",
+    "z_stat = (x_bar - mu) / (sigma / math.sqrt(n))\n",
+    "p_val = 1 - stats.norm.cdf(z_stat)\n",
     "\n",
     "# (p = 0.0013498980316301035, z = 3.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "0.0013498980316301035\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(z_stat)\n",
+    "print(p_val)"
    ]
   },
   {
@@ -57,7 +94,11 @@
    "outputs": [],
    "source": [
     "# Interpret the results in terms of p-value obtained\n",
-    "\n"
+    "This would show that there is a significant difference\n",
+    "between the sample and population mean. This is enough\n",
+    "to say that it was so statistically unlikely to have\n",
+    "found the result that was found the null hypothesis\n",
+    "should be rejected.\n"
    ]
   },
   {
@@ -80,6 +121,43 @@
     "The question is, are these students’ SAT scores significantly greater than a population mean? \n",
     "\n",
     "*Note that the the maker of the SAT prep program claims that it will increase (and not decrease) your SAT score.  So, you would be justified in conducting a one-directional test. (alpha = .05).*\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13400\n",
+      "536.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#name variables/prework\n",
+    "\n",
+    "prep_scores = [434, 694, 457, 534, 720, 400, 484, 478, 610, \n",
+    "            641, 425, 636, 454, 514, 563, 370, 499, \n",
+    "            640, 501, 625, 612, 471, 598, 509, 531]\n",
+    "\n",
+    "sat_sum = 0\n",
+    "for ea_score in range(0, len(prep_scores)):\n",
+    "    sat_sum = sat_sum + prep_scores[ea_score]\n",
+    "print(sat_sum)\n",
+    "print(sat_sum / len(prep_scores))\n",
+    "\n",
+    "\n",
+    "#x=[1,2,3,4,5]\n",
+    "#sum=0\n",
+    "#for s in range(0,len(x)):\n",
+    "#   sum=sum+x[s]\n",
+    "#print(sum) \n",
+    "\n",
     "\n"
    ]
   },
@@ -147,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
